--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
                     <div class="notify-icon rounded-circle me-3" :class="notify ? 'notify-icon-off' : 'notify-icon-on'"
             @click="notifySwitch()"></div>
                     <div class="d-flex flex-column justify-content-center">
-                        <div>
+                        <div v-if="notify">
                             <p class="text-size m-0"><strong>Ricevi notifiche di nuovi messaggi</strong></p>
                             <a class="link small-text-size" href="#" @click="notifySwitch()">Attiva notifiche desktop</a>
+                        </div>
+                        <div v-if="!notify">
+                            <p class="text-size m-0"><strong>Disattiva notifiche di nuovi messaggi</strong></p>
+                            <a class="link small-text-size" href="#" @click="notifySwitch()">Disattiva notifiche desktop</a>
                         </div>
                     </div>
                 </section>
