--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                 </section>
                 <!-- sezione attiva/disattiva notifiche -->
                 <section class="p-3 notify-container d-flex align-items-center">
-                    <div class="notify-icon rounded-circle me-3" :class="notify ? 'notify-icon-off' : 'notify-icon-on'"
-            @click="notifySwitch()"></div>
+                    <div class="notify-icon rounded-circle me-3" :class="notify ? 'notify-icon-off' : 'notify-icon-on'" @click="notifySwitch()"></div>
                     <div class="d-flex flex-column justify-content-center">
                         <div v-if="notify">
                             <p class="text-size m-0"><strong>Ricevi notifiche di nuovi messaggi</strong></p>
@@ -91,10 +90,10 @@
             <main class="main d-flex flex-column justify-content-between">
                 <section class="chat-control-section p-2 d-flex justify-content-between align-items-center">
                     <div class="d-flex align-items-center">
-                        <img class="avatar-image" src="./assets/img/avatar_1.jpg" alt="Avatar utente" />
+                        <img class="avatar-image" :src="['./assets/img/avatar' + contacts[currentIndex].avatar + '.jpg']" alt="Avatar utente" />
                         <div class="">
-                            <div class="fw-bold ms-1">Nome Contatto</div>
-                            <div class="small-text-size ms-1">Ultimo accesso il </div>
+                            <div class="fw-bold ms-1">{{contacts[currentIndex].name}}</div>
+                            <div class="small-text-size ms-1">Ultimo accesso il {{getLastAccess(currentIndex)}}</div>
                         </div>
                     </div>
                     <!-- icone contatto -->
@@ -111,8 +110,7 @@
                             <div class="d-flex justify-content-between">
                                 <div class="text-break received">testo</div>
                             </div>
-                            <div class="small-text-size text-end">data</div>
-                            
+                            <div class="small-text-size text-end">data</div>                            
                         </div>
                     </div>
                 </section>
