--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <!-- Utente -->
                 <section class="user-control-section p-2 d-flex justify-content-between align-items-center">
                     <!-- avatar e nome utente -->
-                    <div>
+                    <div class="d-flex align-items-center">
                         <img class="avatar-image" src="./assets/img/avatar_io.jpg" alt="Avatar utente" />
-                        <p class="fw-bold d-inline">Martina</p>
+                        <div class="fw-bold ms-1">Martina</div>
                     </div>
                     <!-- icone utente -->
                     <div class="icons">
@@ -105,12 +105,12 @@
                 </section>
                 <!-- chat -->
                 <section class="chat-bg overflow-auto me-3">
-                    <div class="message-container">
-                        <div class="chat-message mx-5 my-3 py-2 px-3">
+                    <div v-for="(message, i) in contacts[currentIndex].messages" class="message-container">
+                        <div class="chat-message mx-5 my-3 py-2 px-3" :class="message.status">
                             <div class="d-flex justify-content-between">
-                                <div class="text-break received">testo</div>
+                                <div class="text-break">{{message.message}}</div>
                             </div>
-                            <div class="small-text-size text-end">data</div>                            
+                            <div class="small-text-size text-end">{{message.date}}</div>                            
                         </div>
                     </div>
                 </section>
