--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- lista dei contatti -->
                 <section class="contacts-list-container overflow-auto me-3 border-end">
                     <div v-for="(contact, i) in contacts" class="contact-container" class="contact-container py-2">
-                        <div v-if="contact.name.toLowerCase().includes(searchName)" :class="{'selected-contact': currentIndex === i}"  class="d-flex align-items-center justify-content-between">
+                        <div v-if="contact.name.toLowerCase().includes(searchName)" :class="{'selected-contact': currentIndex === i}" @click="changeChat(i)"  class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center py-2">
                                 <img class="avatar-image" :src="['./assets/img/avatar' + contact.avatar + '.jpg']"alt="" />
                                 <div>
