--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- input per la ricerca dei contatti -->
                 <section class="search-container rounded m-2 px-2 py-1 d-flex">
                     <i class="align-self-center pe-3 icons fas fa-search"></i>
-                    <input class="search input text-size" placeholder="Cerca o inizia una nuova chat" type="text" />
+                    <input class="search input text-size" v-model="searchName" placeholder="Cerca o inizia una nuova chat" type="text" />
                 </section>
                 <!-- lista dei contatti -->
                 <section class="contacts-list-container overflow-auto me-3 border-end">
@@ -117,7 +117,7 @@
                 <!-- scrivi un messaggio -->
                 <section class="chat-control-section d-flex justify-content-center align-items-center">
                     <i class="message-input-icon far fa-smile"></i>
-                    <input class="mx-4 message input rounded text-size" placeholder="Scrivi un messaggio" type="text" />
+                    <input v-model="userMex" @keyup.enter="sendMessage(currentIndex)" class="mx-4 message input rounded text-size" placeholder="Scrivi un messaggio" type="text" />
                     <i class="message-input-icon fas fa-microphone"></i>
                 </section>
             </main>
